--- a/public/index.html
+++ b/public/index.html
@@ -1,14 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <title>Rishi Kanchi</title>
+    <meta name="description" content= "Rishi Kanchi"/>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/rk_logo_black.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="Rishi Kanchi"
-      content="Personal Website of Rishi Kanchi"
-    />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/rk_logo_black.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -24,7 +22,6 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Rishi Kanchi</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
